--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:id="@+id/framelayout"
         android:layout_width="380dp"
-        android:layout_height="121dp"
+        android:layout_height="136dp"
         android:layout_gravity="center"
         android:layout_marginTop="50dp">
 
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            android:background="@color/teal_200"
             android:text="Second" />
 
     </FrameLayout>
